# notice_chat

./: .gitignore  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0a253879171d_init_schema.py  7f6d4f5b3c21_add_embedding_vector_columns.py
docs/: HANDOFF.md  mcp_tool_design.md  sku_notice_ingest_graph.md  sku_notice_ingest_graph.mmd
notice_chat/: __init__.py
notice_chat/db/: __init__.py  lifecycle.py  pgvector_type.py  session.py  settings.py
notice_chat/mcp/: __init__.py  server.py  settings.py
notice_chat/models/: __init__.py  base.py  sku_notice.py
notice_chat/observability/: __init__.py  langsmith_settings.py
notice_chat/repositories/: __init__.py  sku_notice_repository.py
notice_chat/schemas/: __init__.py  sku_notice.py
notice_chat/services/: __init__.py  notice_search_models.py  notice_search_service.py  notice_search_tools.py  sku_notice_crawler.py  sku_notice_embedding.py  sku_notice_embedding_settings.py  sku_notice_ingest_service.py  sku_notice_summary.py  sku_notice_summary_prompt.py  sku_notice_summary_settings.py
tests/unit/: test_langsmith_settings.py  test_notice_mcp_server.py  test_notice_search_service.py  test_sku_notice_crawler.py  test_sku_notice_embedding.py  test_sku_notice_ingest_service.py  test_sku_notice_repository.py
