[project]
name = "notice-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi[standard]>=0.131.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.13",
    "langgraph>=1.0.9",
    "mcp>=1.20.0",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.10",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.18.4",
]

[project.scripts]
notice-chat-mcp = "notice_chat.mcp.server:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "notebook>=7.5.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.mypy]
files = ["notice_chat", "tests", "main.py"]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: 빠른 단위 테스트",
    "integration: 데이터베이스 등 외부 의존 통합 테스트",
]
